// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`environmental-impact-assessment GET /environmental-impact-assessment/column-two-threshold/change should render the change eia column two threshold page with "Does not meet or exceed" radio option checked if eiaColumnTwoThreshold is false 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Change whether meets or exceeds column 2 threshold criteria</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <div class="govuk-radios" data-module="govuk-radios">
                        <div class="govuk-radios__item">
                            <input class="govuk-radios__input" id="eiaColumnTwoThreshold" name="eiaColumnTwoThreshold"
                            type="radio" value="yes">
                            <label class="govuk-label govuk-radios__label" for="eiaColumnTwoThreshold">Meets or exceeds</label>
                        </div>
                        <div class="govuk-radios__item">
                            <input class="govuk-radios__input" id="eiaColumnTwoThreshold-2" name="eiaColumnTwoThreshold"
                            type="radio" value="no" checked>
                            <label class="govuk-label govuk-radios__label" for="eiaColumnTwoThreshold-2">Does not meet or exceed</label>
                        </div>
                    </div>
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`environmental-impact-assessment GET /environmental-impact-assessment/column-two-threshold/change should render the change eia column two threshold page with "Meets or exceeds" radio option checked if eiaColumnTwoThreshold is true 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Change whether meets or exceeds column 2 threshold criteria</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <div class="govuk-radios" data-module="govuk-radios">
                        <div class="govuk-radios__item">
                            <input class="govuk-radios__input" id="eiaColumnTwoThreshold" name="eiaColumnTwoThreshold"
                            type="radio" value="yes" checked>
                            <label class="govuk-label govuk-radios__label" for="eiaColumnTwoThreshold">Meets or exceeds</label>
                        </div>
                        <div class="govuk-radios__item">
                            <input class="govuk-radios__input" id="eiaColumnTwoThreshold-2" name="eiaColumnTwoThreshold"
                            type="radio" value="no">
                            <label class="govuk-label govuk-radios__label" for="eiaColumnTwoThreshold-2">Does not meet or exceed</label>
                        </div>
                    </div>
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`environmental-impact-assessment GET /environmental-impact-assessment/requires-environmental-statement/change should render the change eia requires environmental statement page with "Needed" radio option checked if eiaRequiresEnvironmentalStatement is true 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Change opinion that environmental statement needed</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <div class="govuk-radios" data-module="govuk-radios">
                        <div class="govuk-radios__item">
                            <input class="govuk-radios__input" id="eiaRequiresEnvironmentalStatement"
                            name="eiaRequiresEnvironmentalStatement" type="radio" value="yes" checked>
                            <label class="govuk-label govuk-radios__label" for="eiaRequiresEnvironmentalStatement">Needed</label>
                        </div>
                        <div class="govuk-radios__item">
                            <input class="govuk-radios__input" id="eiaRequiresEnvironmentalStatement-2"
                            name="eiaRequiresEnvironmentalStatement" type="radio" value="no">
                            <label class="govuk-label govuk-radios__label" for="eiaRequiresEnvironmentalStatement-2">Not needed</label>
                        </div>
                    </div>
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`environmental-impact-assessment GET /environmental-impact-assessment/requires-environmental-statement/change should render the change eia requires environmental statement page with "Not needed" radio option checked if eiaRequiresEnvironmentalStatement is false 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Change opinion that environmental statement needed</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <div class="govuk-radios" data-module="govuk-radios">
                        <div class="govuk-radios__item">
                            <input class="govuk-radios__input" id="eiaRequiresEnvironmentalStatement"
                            name="eiaRequiresEnvironmentalStatement" type="radio" value="yes">
                            <label class="govuk-label govuk-radios__label" for="eiaRequiresEnvironmentalStatement">Needed</label>
                        </div>
                        <div class="govuk-radios__item">
                            <input class="govuk-radios__input" id="eiaRequiresEnvironmentalStatement-2"
                            name="eiaRequiresEnvironmentalStatement" type="radio" value="no" checked>
                            <label class="govuk-label govuk-radios__label" for="eiaRequiresEnvironmentalStatement-2">Not needed</label>
                        </div>
                    </div>
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;
